@@ -528,9 +528,14 @@ check_cmd_line() {
     "videocodec_settings_${video_encoder}"
     
     # do not allow to use 'aom_av1' video encoder in a one step process (-1/--one-step)
-    # (aom_av1_ is still experimental and very slow in ffmpeg)
+    # (aom_av1 is still experimental and very slow in ffmpeg)
     [ "$video_encoder" = 'aom_av1' ] && [ "$one_step" = 'true' ] &&
         exit_program "'${video_encoder}' cannot be used for a one step process (still experimental and very slow in FFmpeg)"
+    
+    # do not allow to use 'librav1e' video encoder in a one step process (-1/--one-step)
+    # (rav1e is very slow in ffmpeg)
+    [ "$video_encoder" = 'aom_av1' ] && [ "$one_step" = 'true' ] &&
+        exit_program "'${video_encoder}' cannot be used for a one step process (very slow in FFmpeg)"
     
     # do not allow to use -A/--vaapi-device without setting a vaapi video encoder
     case "$video_encoder" in
