@@ -7,6 +7,7 @@ https://github.com/dbermond/screencast/
 
 ### version next
 - added support for AOM AV1 video encoder
+- added support for rav1e AV1 video encoder
 - added support for Intel SVT HEVC video encoder
 - changed default font for text watermark
 - new option: select tickness of the screen region border delimiter
